# python_types

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/tedium/: __init__.py
src/tedium/types/: __init__.py
src/tedium/types/core/: README.md  __init__.py  base.py  exceptions.py
src/tedium/types/core/immutable/: __init__.py  exceptions.py  integer.py
tests/: conftest.py
tests/tedium/types/core/: test_base.py  test_exceptions.py
tests/tedium/types/core/immutable/: test_integer.py
tests/types/core/: test_base.py
