[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tedium-types"
version = "0.1.0"
description = "A type system implementation focusing on immutability and validation"
authors = [
    {name = "Matt Bernier"}
]
requires-python = "^3.9"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "tedium", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.0.0"
pytest-mypy-plugins = "^3.2.0"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v" 